<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Who Has My Stuff?</string>
    <string name="addButton">Add New</string>
    <string name="export_button">Backup</string>
    <string name="import_button">Restore</string>
    <string name="history_button">History</string>
    <string name="date">Date</string>
    <string name="lent_on_date">Lent on</string>
    <string name="returnDate">Expected return date</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="type_prompt">Please select the type of the lent item</string>
    <string name="history_title">History: Returned Items</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Save changes</string>
    <string name="mark_as_lent_button">Lend again</string>
    <string name="delete_button">Delete</string>
    <string name="add_title">Add New Lent Item</string>
    <string name="edit_title">Edit Lent Item</string>
    <string name="add_calendar_entry">Add Entry to Calendar</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_prompt">Please select the calendar</string>
    <string name="ok_button">OK</string>
    <string name="returned_button">Mark as Returned</string>
    <string name="cancel_button">Cancel</string>
    <string name="submenu_edit">Edit</string>
    <string name="submenu_mark_as_returned">Mark as Returned</string>
    <string name="submenu_delete">Delete</string>
    <string name="person">Person</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="weeks">weeks</string>
    <string name="week">week</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="unknown">Unknown</string>
    <string name="choose_person">Choose person</string>
    <string name="expected_return">Expected return of</string>
    <string name="no_calendar_selected_title">No calendar selected</string>
    <string name="no_calendar_selected_message">Please select a calendar.</string>
    <string name="sd_card_error_title">Unable to Access SD Card</string>
    <string name="sd_card_error_not_readable">SD Card is not readable!</string>
    <string name="sd_card_error_not_writeable">SD Card is not writable!</string>
    <string name="database_export_title">Database Backup</string>
    <string name="database_export_message">The backup file already exists. Overwrite?</string>
    <string name="database_import_title">Database Restore</string>
    <string name="database_import_message">Restoring the database will overwrite changes since the last backup. Are you sure?</string>
    <string name="database_export_success">Database saved to WhoHasMyStuff.xml</string>
    <string name="database_export_error">An error occcured while writing the backup file!</string>
    <string name="database_import_error">An error occcured while reading the backup file!</string>
    <string name="restore_on_first_start">Backup file detected. Restore?</string>
    <string name="restore_on_first_start_yes">Yes, restore</string>
    <string name="restore_on_first_start_no">No, create example data</string>

    <string-array name="type_array">
        <item>Other</item>
        <item>Book</item>
        <item>Movie</item>
        <item>CD</item>
        <item>Money</item>
    </string-array>
</resources>
