<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whohasmystuff="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/addButton"
          android:title="@string/addButton"
          android:icon="@android:drawable/ic_menu_add"
          whohasmystuff:showAsAction="ifRoom"/>

    <item android:id="@+id/historyButton"
          android:title="@string/history_button"
          android:icon="@android:drawable/ic_menu_recent_history"/>

    <item android:id="@+id/exportButton"
          android:title="@string/export_button"
          android:icon="@android:drawable/ic_menu_save"/>

    <item android:id="@+id/importButton"
          android:title="@string/import_button"
          android:icon="@android:drawable/ic_menu_revert"/>
</menu>